# Blink-Once__Sales-Production-Management-System

./: .env  .env.example  QUICKSTART.md  README.md  alter_db_freelancer.py  dashboard.txt  fix_null_freelancer_amounts.py  kldfjlsj  main.py  migrate3.py  migrate4.py  migrate5.py  migrate6.py  migrate_freelancer_details.py  migrate_prod_year.py  migrate_team.py  performance_hub.txt  pyproject.toml  requirements.txt  run.bat  run.sh
Prompts/: 2_YFD_and left sidebar  2_YFD_and left sidebar.txt  3_Security
app/: __init__.py  config.py  database.py  models.py
app/routes/: __init__.py  auth.py  camera_rent.py  checklist.py  client_followup.py  dashboard.py  editing.py  freelancers.py  investment.py  monthly_financial.py  on_production.py  performance_hub.py  post_production.py  pre_production.py  upcoming_shoots.py
app/scripts/: alter_confirmation_column.py  alter_followup_add_requirements.py  alter_followup_add_year_month.py
app/static/css/: style.css
app/static/js/: payment-helpers.js
app/templates/: base.html  dashboard.html  error.html
app/templates/auth/: login.html
app/templates/checklist/: detail.html  form.html  list.html
app/templates/financial/: camera_rent_detail.html  camera_rent_form.html  camera_rent_list.html  editing_detail.html  editing_form.html  editing_list.html  followup_detail.html  followup_form.html  followup_list.html  investment_detail.html  investment_form.html  investment_list.html  monthly_detail.html  monthly_form.html  monthly_list.html  upcoming_shoots_detail.html  (+2 more)
app/utils/: number_to_words.py
blink_once_sales_production_management_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: check_csrf.py
tmp/: inspect_event_date_types.py  inspect_schema.py
(+14 files in other folders)
