[project]
name = "blink-once-sales-production-management-system"
version = "1.0.0"
description = "Professional Sales & Production Management System for Creative Production Companies - Built with FastAPI, SQLAlchemy, and Microsoft SQL Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "pyodbc==5.1.0",
    "jinja2==3.1.2",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "starlette==0.27.0",
    "typing-extensions==4.8.0",
    "itsdangerous==2.1.2",
    "python-dotenv>=1.2.2",
    "bcrypt==4.1.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "email-validator==2.1.0",
    "aiosmtplib==3.0.0",
    "pyotp==2.9.0",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
